Remove deprecated Thread method call